--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "koa-bodyparser": "^2.0.1",
     "koa-static": "^2.0.0",
     "koa-static-cache": "^3.1.4",
+    "koa-views": "^4.1.0",
     "material-ui": "^0.15.0-alpha.2",
+    "mustache": "^2.2.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0-rc5",
     "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.5.2",
-    "swig": "^1.4.2"
+    "redux": "^3.5.2"
   }
 }
